# RAG-streamlit

./: README.md  app.py  pyproject.toml  styles.css
utils/: embbedings.py  split.py  text.py
